--- a/sass/layout/_header_lines.scss
+++ b/sass/layout/_header_lines.scss
@@ -7,7 +7,7 @@
 }
 
 .header-line-bottom {
-  position: fixed;
+  position: absolute;
   border-bottom: 0.2rem solid var(--pip-boy-primary-color);
   padding-bottom: 0.2rem;
 }
